<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.uco.dware6.p4danielwa.SignupActivity">

    <!--full name -->
    <TextView
        android:id="@+id/full_name_text"
        android:layout_alignBottom="@+id/full_name_edit"
        android:layout_alignParentTop="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/full_name" />
    <EditText
        android:id="@id/full_name_edit"
        android:layout_toRightOf="@id/full_name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:inputType="textCapWords"/>

    <!--password -->
    <TextView
        android:id="@+id/password_text"
        android:layout_below="@id/full_name_text"
        android:layout_alignBottom="@+id/password_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/password" />
    <EditText
        android:id="@id/password_edit"
        android:layout_toRightOf="@id/password_text"
        android:layout_below="@id/full_name_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:inputType="textPassword" />

    <!--date picker -->
    <TextView
        android:id="@+id/date_picker_text"
        android:layout_below="@id/password_text"
        android:layout_alignBottom="@+id/date_picker_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/dob" />
    <Button
        android:id="@id/date_picker_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/date_picker_text"
        android:layout_below="@id/password_edit"
        android:layout_alignStart="@id/password_edit"
        android:layout_alignLeft="@id/password_edit"
        android:textSize="25sp"
        android:text="@string/birthday" />

    <!--gender radio -->
    <TextView
        android:id="@+id/gender_radio_text"
        android:layout_below="@id/date_picker_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/gender" />

    <RadioGroup
        android:id="@+id/gender_radio_group"
        android:layout_toRightOf="@id/gender_radio_text"
        android:layout_below="@id/date_picker_btn"
        android:layout_alignStart="@id/date_picker_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"/>
    </RadioGroup>

    <!--classification spinner -->
    <TextView
        android:id="@+id/classification_text"
        android:layout_below="@id/gender_radio_text"
        android:layout_alignBottom="@+id/classification_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="Class"/>

    <Spinner
        android:id="@id/classification_spinner"
        android:layout_below="@id/gender_radio_group"
        android:layout_toRightOf="@id/gender_radio_text"
        android:layout_alignStart="@id/gender_radio_group"
        android:layout_alignEnd="@id/gender_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
    </Spinner>

    <!--Skills -->
    <TextView
        android:id="@+id/skills_text"
        android:layout_below="@id/classification_text"
        android:layout_alignBottom="@+id/checkbox_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/skills" />
    <LinearLayout
        android:id="@id/checkbox_group"
        android:layout_below="@id/classification_spinner"
        android:layout_toRightOf="@id/skills_text"
        android:layout_alignStart="@id/classification_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/skill1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/skill1"/>
        <CheckBox
            android:id="@+id/skill2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/skill2"/>
        <CheckBox
            android:id="@+id/skill3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/skill3"/>
        <CheckBox
            android:id="@+id/skill4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/skill4"/>
        <CheckBox
            android:id="@+id/skill5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/skill5"/>
    </LinearLayout>

    <Button
        android:id="@+id/register_btn"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="45sp"
        android:text="@string/register"/>
</RelativeLayout>
