<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.uco.dware6.p4danielwa.MainActivity">

    <!--This is the full name view -->
    <TextView
        android:id="@+id/full_name_text"
        android:layout_alignBottom="@+id/full_name_edit"
        android:layout_alignParentTop="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/full_name" />
    <EditText
        android:id="@id/full_name_edit"
        android:layout_toRightOf="@id/full_name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/password_text"
        android:layout_below="@id/full_name_text"
        android:layout_alignBottom="@+id/password_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/password" />
    <EditText
        android:id="@id/password_edit"
        android:layout_toRightOf="@id/password_text"
        android:layout_below="@id/full_name_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"        />

    <TextView
        android:id="@+id/date_picker_text"
        android:layout_below="@id/password_text"
        android:layout_alignBottom="@+id/date_picker_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/dob" />
    <Button
        android:id="@id/date_picker_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/date_picker_text"
        android:layout_below="@id/password_edit"
        android:layout_alignStart="@id/password_edit"
        android:layout_alignLeft="@id/password_edit"
        android:textSize="25sp"
        android:text="@string/start_date" />
    <!--
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RadioGroup>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </Spinner>
    -->
</RelativeLayout>
